--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   intl: ^0.19.0
   google_fonts: 6.1.0
   bloc: ^8.1.4
+  font_awesome_flutter: ^10.7.0
+  salomon_bottom_bar: ^3.3.2
 
 dev_dependencies:
   flutter_test:
