--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   location: ^6.0.1
   flutter_polyline_points: ^2.0.0
   google_maps_flutter: ^2.5.3
+  dio: ^5.4.3+1
+  go_router: ^14.0.2
 
 dev_dependencies:
   flutter_test:
