--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   google_maps_flutter: ^2.5.3
   dio: ^5.4.3+1
   go_router: ^14.0.2
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
