--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCmqExWsOVXenqzF87yhQn01J3mUzHlP8E"/>
+            android:value="${googleMapsApiKey}"/>
     </application>
 </manifest>
