Update map tracking and geolocation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
-    "cSpell.words": [
-        "Bahłaj",
-        "kanit",
-        "Piotr",
-        "polyline",
-        "Xenqz"
-    ]
+  "cSpell.words": [
+    "Bahłaj",
+    "geolocator",
+    "kanit",
+    "Piotr",
+    "polyline",
+    "typeahead",
+    "Xenqz"
+  ]
 }
