--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,6 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.5
-  http: ^1.2.0
   equatable: ^2.0.5
   intl: ^0.19.0
   google_fonts: 6.1.0
@@ -25,8 +24,11 @@ dependencies:
   google_maps_flutter: ^2.5.3
   dio: ^5.4.3+1
   go_router: ^14.0.2
-  shared_preferences: ^2.2.3
+  shared_preferences: ^2.3.2
   flutter_dotenv: ^5.1.0
+  geolocator: ^13.0.1
+  flutter_typeahead: ^5.2.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
