--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,34 +29,24 @@ dependencies:
   geolocator: ^13.0.1
   flutter_typeahead: ^5.2.0
   http: ^1.2.2
+  dotenv: ^4.2.0
+  retrofit: ^4.4.1
+  json_annotation: ^4.9.0
+  freezed_annotation: ^2.4.4
+  freezed: ^2.5.7
+  get_it: ^8.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  retrofit_generator: ^9.1.4
+  build_runner: ^2.4.13
+  json_serializable: ^6.8.0
 
 flutter:
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  assets:
+    - .env
