Add search function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
   "cSpell.words": [
     "Bahłaj",
+    "Debouncer",
     "geolocator",
     "kanit",
     "Piotr",
     "polyline",
     "typeahead",
+    "unfocus",
     "Xenqz"
   ]
 }
