Add precise location fetching

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,10 @@
   "cSpell.words": [
     "Bahłaj",
     "Debouncer",
+    "geocode",
     "geolocator",
     "kanit",
+    "latlng",
     "nearbysearch",
     "Piotr",
     "polyline",
