Add dashboard map with ev station marked

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,9 +9,11 @@
     "kanit",
     "latlng",
     "nearbysearch",
+    "pagetoken",
     "Piotr",
     "polyline",
     "polylines",
+    "textsearch",
     "typeahead",
     "unfocus",
     "Xenqz"
