Refactored code for additional api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,9 +13,11 @@
     "Piotr",
     "polyline",
     "polylines",
+    "SMARTCAR",
     "textsearch",
     "typeahead",
     "unfocus",
+    "vehicledatabases",
     "Xenqz"
   ]
 }
