--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,5 +51,14 @@
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<key>GOOGLE_MAPS_API_KEY</key>
 	<string>$(GOOGLE_MAPS_API_KEY)</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+  	  <dict>
+    	<key>CFBundleURLSchemes</key>
+    	<array>
+    	  <string>myapp</string>
+   		</array>
+  	  </dict>
+	</array>
 </dict>
 </plist>
