--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   freezed_annotation: ^2.4.4
   freezed: ^2.5.7
   get_it: ^8.0.2
+  uni_links: ^0.5.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
