--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   get_it: ^8.0.2
   uni_links: ^0.5.1
   url_launcher: ^6.3.1
+  drift: ^2.22.1
+  sqlite3_flutter_libs: ^0.5.26
+  sqlite3: ^2.5.0
+  path: ^1.9.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +51,7 @@ dev_dependencies:
   retrofit_generator: ^9.1.4
   build_runner: ^2.4.13
   json_serializable: ^6.8.0
+  drift_dev: ^2.22.0
 
 flutter:
   uses-material-design: true
