--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   sqlite3: ^2.5.0
   path: ^1.9.0
   path_provider: ^2.1.5
+  bloc_test: ^9.1.7
+  mocktail: ^1.0.4
 
 dev_dependencies:
   flutter_test:
